<resources>
    <string name="app_name">AviaApp</string>
    <string name="avia_tickets_icon">AviaTickets</string>
    <string name="hotels_icons">Hotels</string>
    <string name="in_short_icon">In short</string>
    <string name="subscriptions_icon">Subscriptions</string>
    <string name="profile_icon">Profile</string>
    <string name="find_tickets">Find cheap tickets</string>
    <string name="from_where">From where-Moscow</string>
    <string name="to_where">To where-Turkey</string>
    <string name="musically">Fly away musically</string>
    <string name="hard_route">Hard route</string>
    <string name="anywhere">Anywhere</string>
    <string name="weekend">Weekends</string>
    <string name="hot_tickets">Hot tickets</string>
    <string name="stambul">Istanbul</string>
    <string name="sochi">Sochi</string>
    <string name="phuket">Phuket</string>
    <string name="popular_destination">Popular destination</string>
    <string name="direct_flights">Direct flights</string>
    <string name="show_all">Show all</string>
    <string name="look_all_tickets">Look all tickets</string>
    <string name="filters">Filters</string>
    <string name="filter">Filter</string>
    <string name="transfers">Transfers</string>
    <string name="without_transfers">Without transfers</string>
    <string name="only_with_luggage">Only with luggage</string>
    <string name="ready">Ready</string>
    <string name="price_chart">Price chart</string>
    <string name="january">jan</string>
    <string name="february">feb</string>
    <string name="march">mar</string>
    <string name="april">apr</string>
    <string name="may">may</string>
    <string name="june">jun</string>
    <string name="jule">jul</string>
    <string name="august">aug</string>
    <string name="september">sep</string>
    <string name="october">oct</string>
    <string name="november">nov</string>
    <string name="december">dec</string>
    <string name="monday">mo</string>
    <string name="tuesday">tu</string>
    <string name="wednesday">we</string>
    <string name="thursday">th</string>
    <string name="friday">fr</string>
    <string name="saturday">sa</string>
    <string name="sunday">su</string>
    <string name="back">add</string>
    <string name="one_econom">1, econom</string>

</resources>