<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_corners_dialog"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_search2"
        android:layout_width="296dp"
        android:layout_height="90dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="45dp"
        android:src="@drawable/search2_rounded_corners"
        />

    <ImageView
        android:id="@+id/iv_loupe"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/loupe"
        app:layout_constraintStart_toStartOf="@id/iv_search2"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/ed2_to_where"
        app:layout_constraintBottom_toBottomOf="@id/ed2_to_where"
        />

    <ImageView
        android:id="@+id/iv_little_plane"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/little_plane"
        app:layout_constraintStart_toStartOf="@id/iv_search2"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/ed1_from_where"
        app:layout_constraintBottom_toBottomOf="@id/ed1_from_where"
        />

    <View
        android:id="@+id/line1"
        android:layout_width="232dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toEndOf="@id/iv_loupe"
        app:layout_constraintTop_toBottomOf="@id/ed1_from_where"
        android:background="@color/line"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@id/ed2_to_where"
        />

    <EditText
        android:id="@+id/ed1_from_where"
        android:layout_width="0dp"
        android:maxWidth="232dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/sf_pro_display_medium"
        style="@style/NoUnderlineEditText"
        android:inputType="text"
        android:hint="@string/from_where"
        android:text=""
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/line1"
        android:textColorHint="@color/ed_hint"
        app:layout_constraintTop_toTopOf="@id/iv_search2"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        />
    <EditText
        android:id="@+id/ed2_to_where"
        android:layout_width="0dp"
        android:maxWidth="232dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/sf_pro_display_medium"
        style="@style/NoUnderlineEditText"
        android:inputType="text"
        android:hint="@string/to_where"
        android:text=""
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/line1"
        android:textColorHint="@color/ed_hint"
        app:layout_constraintBottom_toBottomOf="@id/iv_search2"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        />

    <ImageView
        android:id="@+id/iv_clue1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/hard_route"
        app:layout_constraintTop_toBottomOf="@id/iv_search2"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="27dp"
        />

    <TextView
        android:id="@+id/tv_hard_route"
        android:layout_width="wrap_content"
        android:maxWidth="70dp"
        android:layout_height="wrap_content"
        android:text="@string/hard_route"
        android:textSize="14sp"
        android:fontFamily="@font/sf_pro_display_medium"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/iv_clue1"
        app:layout_constraintStart_toStartOf="@id/iv_clue1"
        app:layout_constraintEnd_toEndOf="@id/iv_clue1"
        />

    <ImageView
        android:id="@+id/iv_clue2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/anywhere"
        app:layout_constraintStart_toEndOf="@id/iv_clue1"
        app:layout_constraintEnd_toStartOf="@id/iv_clue3"
        app:layout_constraintTop_toBottomOf="@id/iv_search2"
        android:layout_marginTop="24dp"
        />
    <TextView
        android:id="@+id/tv_anywhere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anywhere"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:fontFamily="@font/sf_pro_display_medium"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/iv_clue2"
        app:layout_constraintStart_toStartOf="@id/iv_clue2"
        app:layout_constraintEnd_toEndOf="@id/iv_clue2"
        />
    <ImageView
        android:id="@+id/iv_clue3"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/weekends"
        app:layout_constraintEnd_toStartOf="@id/iv_clue4"
        app:layout_constraintStart_toEndOf="@id/iv_clue2"
        app:layout_constraintTop_toBottomOf="@id/iv_search2"
        android:layout_marginTop="24dp"
        />
    <TextView
        android:id="@+id/tv_weekends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weekend"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:fontFamily="@font/sf_pro_display_medium"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/iv_clue3"
        app:layout_constraintStart_toStartOf="@id/iv_clue3"
        app:layout_constraintEnd_toEndOf="@id/iv_clue3"
        />
    <ImageView
        android:id="@+id/iv_clue4"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/hot_tickets"
        app:layout_constraintTop_toBottomOf="@id/iv_search2"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="27dp"
        />
    <TextView
        android:id="@+id/tv_hot_tickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hot_tickets"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:fontFamily="@font/sf_pro_display_medium"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/iv_clue4"
        app:layout_constraintStart_toStartOf="@id/iv_clue4"
        app:layout_constraintEnd_toEndOf="@id/iv_clue4"
        />
    <ImageView
        android:id="@+id/iv_search1"
        android:layout_width="0dp"
        android:layout_height="216dp"
        app:layout_constraintTop_toBottomOf="@id/tv_hard_route"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/search2_rounded_corners"
        />

    <ImageView
        android:id="@+id/iv_arrives1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="@id/iv_search1"
        android:layout_marginTop="24dp"
        android:src="@drawable/stambul"
        app:layout_constraintStart_toStartOf="@id/iv_search1"
        android:layout_marginStart="16dp"
        />
    <View
        android:id="@+id/zone1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/iv_search1"
        app:layout_constraintEnd_toEndOf="@id/iv_search1"
        app:layout_constraintTop_toTopOf="@id/iv_arrives1"
        app:layout_constraintBottom_toBottomOf="@id/iv_arrives1"
        />
    <TextView
        android:id="@+id/tv_arrives1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stambul"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/iv_arrives1"
        app:layout_constraintStart_toEndOf="@id/iv_arrives1"
        android:layout_marginStart="8dp"
        />
    <TextView
        android:id="@+id/tv_arrives11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/line"
        android:text="@string/popular_destination"
        android:fontFamily="@font/sf_pro_display_regular"
        app:layout_constraintBottom_toBottomOf="@id/iv_arrives1"
        app:layout_constraintStart_toEndOf="@id/iv_arrives1"
        android:layout_marginStart="8dp"
        />

    <ImageView
        android:id="@+id/iv_arrives2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/iv_arrives1"
        app:layout_constraintBottom_toTopOf="@id/iv_arrives3"
        android:src="@drawable/sochi"
        app:layout_constraintStart_toStartOf="@id/iv_search1"
        android:layout_marginStart="16dp"
        />
    <View
        android:id="@+id/zone2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/iv_search1"
        app:layout_constraintEnd_toEndOf="@id/iv_search1"
        app:layout_constraintTop_toTopOf="@id/iv_arrives2"
        app:layout_constraintBottom_toBottomOf="@id/iv_arrives2"
        />
    <TextView
        android:id="@+id/tv_arrives2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sochi"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/iv_arrives2"
        app:layout_constraintStart_toEndOf="@id/iv_arrives2"
        android:layout_marginStart="8dp"
        />
    <TextView
        android:id="@+id/tv_arrives22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/line"
        android:text="@string/popular_destination"
        android:fontFamily="@font/sf_pro_display_regular"
        app:layout_constraintBottom_toBottomOf="@id/iv_arrives2"
        app:layout_constraintStart_toEndOf="@id/iv_arrives2"
        android:layout_marginStart="8dp"
        />
    <ImageView
        android:id="@+id/iv_arrives3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_search1"
        android:layout_marginBottom="24dp"
        android:src="@drawable/phuket"
        app:layout_constraintStart_toStartOf="@id/iv_search1"
        android:layout_marginStart="16dp"
        />
    <View
        android:id="@+id/zone3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/iv_search1"
        app:layout_constraintEnd_toEndOf="@id/iv_search1"
        app:layout_constraintTop_toTopOf="@id/iv_arrives3"
        app:layout_constraintBottom_toBottomOf="@id/iv_arrives3"
        />
    <TextView
        android:id="@+id/tv_arrives3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phuket"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/iv_arrives3"
        app:layout_constraintStart_toEndOf="@id/iv_arrives3"
        android:layout_marginStart="8dp"
        />
    <TextView
        android:id="@+id/tv_arrives33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/line"
        android:text="@string/popular_destination"
        android:fontFamily="@font/sf_pro_display_regular"
        app:layout_constraintBottom_toBottomOf="@id/iv_arrives3"
        app:layout_constraintStart_toEndOf="@id/iv_arrives3"
        android:layout_marginStart="8dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>