<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background1"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/background_dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        />
    <ImageView
        android:id="@+id/iv_cancel"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/cancel"
        app:layout_constraintStart_toStartOf="@id/background1"
        app:layout_constraintTop_toTopOf="@id/background1"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        />
    <TextView
        android:id="@+id/tv_filters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filters"
        android:textSize="20sp"
        android:fontFamily="@font/sf_pro_display_medium"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/iv_cancel"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/iv_cancel"
        app:layout_constraintBottom_toBottomOf="@id/iv_cancel"
        />
    <TextView
        android:id="@+id/tv_transfers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transfers"
        android:textColor="@color/white"
        android:fontFamily="@font/sf_pro_display_medium"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/background1"
        app:layout_constraintStart_toStartOf="@id/background1"
        android:layout_marginTop="24dp"
        />
    <ImageView
        android:id="@+id/background2"
        android:layout_width="0dp"
        android:layout_height="141dp"
        android:background="@color/background_dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_transfers"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        />
    <TextView
        android:id="@+id/tv_without_transfers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/without_transfers"
        android:fontFamily="@font/sf_pro_display_light"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/background2"
        app:layout_constraintStart_toStartOf="@id/background2"
        android:layout_margin="16dp"
        />
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:thumbTint="@color/price_color"
        android:trackTint="@color/price_color"
        android:checked="true"
        app:layout_constraintTop_toTopOf="@id/background2"
        app:layout_constraintEnd_toEndOf="@id/background2"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        />
    <ImageView
        android:id="@+id/background3"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:background="@color/background_dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/background2"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        />
    <TextView
        android:id="@+id/tv_luggage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/only_with_luggage"
        android:textSize="16sp"
        android:fontFamily="@font/sf_pro_display_light"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@+id/background3"
        app:layout_constraintStart_toStartOf="@id/background3"
        android:layout_margin="16dp"
        />
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:thumbTint="@color/price_color"
        android:trackTint="@color/price_color"
        android:checked="true"
        app:layout_constraintTop_toTopOf="@id/background3"
        app:layout_constraintEnd_toEndOf="@id/background3"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/b_ready"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/b_ready"
        app:cornerRadius="8dp"
        android:text="@string/ready"
        android:textColor="@color/white"
        android:fontFamily="@font/sf_pro_display_mediumitalic"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="62dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        />
    
</androidx.constraintlayout.widget.ConstraintLayout>