<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragment.MenuFragment">

    <TextView
        android:id="@+id/tv_cheap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_display_medium"
        android:gravity="center"
        android:maxWidth="200dp"
        android:text="@string/find_tickets"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_search1"
        android:layout_width="329dp"
        android:layout_height="122dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_cheap"
        android:layout_marginTop="36dp"
        android:src="@drawable/search1_rounded_corners"
        />
    <ImageView
        android:id="@+id/iv_search2"
        android:layout_width="296dp"
        android:layout_height="90dp"
        app:layout_constraintTop_toTopOf="@id/iv_search1"
        app:layout_constraintBottom_toBottomOf="@id/iv_search1"
        app:layout_constraintStart_toStartOf="@id/iv_search1"
        app:layout_constraintEnd_toEndOf="@id/iv_search1"
        android:src="@drawable/search2_rounded_corners"
        />

    <ImageView
        android:id="@+id/iv_loupe"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/loupe"
        app:layout_constraintStart_toStartOf="@id/iv_search2"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/iv_search2"
        app:layout_constraintBottom_toBottomOf="@id/iv_search2"
        />
    
    <View
        android:id="@+id/line1"
        android:layout_width="232dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toEndOf="@id/iv_loupe"
        app:layout_constraintTop_toTopOf="@id/iv_loupe"
        android:background="@color/line"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_loupe"
        />

    <EditText
        android:id="@+id/ed1_from_where"
        android:layout_width="0dp"
        android:maxWidth="232dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/sf_pro_display_medium"
        style="@style/NoUnderlineEditText"
        android:inputType="text"
        android:hint="@string/from_where"
        android:text=""
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/line1"
        android:textColorHint="@color/ed_hint"
        app:layout_constraintBottom_toTopOf="@id/line1"
        android:layout_marginBottom="8dp"
        />
    <EditText
        android:id="@+id/ed2_to_where"
        android:layout_width="0dp"
        android:maxWidth="232dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="@font/sf_pro_display_medium"
        style="@style/NoUnderlineEditText"
        android:inputType="text"
        android:hint="@string/to_where"
        android:text=""
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/line1"
        android:textColorHint="@color/ed_hint"
        app:layout_constraintTop_toBottomOf="@id/line1"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/tv2_musically"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/musically"
        android:fontFamily="@font/sf_pro_display_medium"
        android:textSize="22sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/iv_search2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_musically"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@id/tv2_musically"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>